--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "name": "pixel-art",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "npm" : "7.10.0",
+    "node": "14.8.0"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
