--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "npm" : "7.10.0",
+    "npm": "7.10.0",
     "node": "14.8.0"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-brands-svg-icons": "^5.15.3",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
