--- a/package.json
+++ b/package.json
@@ -15,7 +15,13 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "blob-stream": "^0.1.3",
+    "downloadjs": "^1.4.7",
+    "file-saver": "^2.0.5",
+    "gif-encoder": "^0.7.2",
+    "html-to-image": "^1.6.2",
     "react": "^17.0.2",
+    "react-component-export-image": "^1.0.6",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
